--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -27,8 +27,8 @@
         android:id="@+id/character_creator_page_one_edit_level"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="30dp"
         android:ems="10"
         android:hint="1"
         android:inputType="number"
@@ -75,21 +75,23 @@
 
     <Button
         android:id="@+id/character_creator_page_one_next_page"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="65dp"
         android:layout_marginEnd="40dp"
         android:text="Next Page"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/centerAligner"
         app:layout_constraintTop_toBottomOf="@id/EDIT_CHARISMA" />
 
     <Button
         android:id="@+id/character_creator_page_one_roll_stats"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="65dp"
         android:text="Roll Stats"
+        app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/EDIT_WISDOM" />
 
@@ -166,7 +168,6 @@
         android:id="@+id/STRENGTH_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:text="Strength"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/STRENGTH_ICON"
@@ -177,8 +178,11 @@
         android:id="@+id/EDIT_STRENGTH"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="61dp"
         android:ems="10"
         android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/INTELLIGENCE_ICON"
         app:layout_constraintEnd_toEndOf="@id/STRENGTH_ICON"
         app:layout_constraintStart_toStartOf="@id/STRENGTH_ICON"
         app:layout_constraintTop_toBottomOf="@+id/STRENGTH_TEXT" />
@@ -187,49 +191,58 @@
         android:id="@+id/RACIAL_STRENGTH"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="347dp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/STRENGTH_ICON"
         app:layout_constraintStart_toStartOf="@id/STRENGTH_ICON"
-        tools:layout_editor_absoluteY="347dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/RACIAL_DEXTERITY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="347dp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/DEXTERITY_ICON"
         app:layout_constraintStart_toStartOf="@id/DEXTERITY_ICON"
-        tools:layout_editor_absoluteY="347dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/RACIAL_CONSTITUTION"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="347dp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/CONSTITUTION_ICON"
         app:layout_constraintStart_toStartOf="@id/CONSTITUTION_ICON"
-        tools:layout_editor_absoluteY="347dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/RACIAL_INTELLIGENCE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/INTELLIGENCE_ICON"
         app:layout_constraintStart_toStartOf="@id/INTELLIGENCE_ICON"
-        tools:layout_editor_absoluteY="347dp" />
+        app:layout_constraintTop_toBottomOf="@id/EDIT_INTELLIGENCE" />
 
     <TextView
         android:id="@+id/RACIAL_WISDOM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/WISDOM_ICON"
         app:layout_constraintStart_toStartOf="@id/WISDOM_ICON"
-        tools:layout_editor_absoluteY="347dp" />
+        app:layout_constraintTop_toBottomOf="@id/EDIT_WISDOM" />
 
     <TextView
         android:id="@+id/RACIAL_CHARISMA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/CHARISMA_ICON"
         app:layout_constraintStart_toStartOf="@id/CHARISMA_ICON"
-        tools:layout_editor_absoluteY="347dp" />
+        app:layout_constraintTop_toBottomOf="@id/EDIT_CHARISMA" />
 
     <ImageView
         android:id="@+id/DEXTERITY_ICON"
@@ -237,6 +250,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/dexterity"
+        app:layout_constraintBottom_toTopOf="@+id/DEXTERITY_TEXT"
         app:layout_constraintEnd_toStartOf="@id/CONSTITUTION_ICON"
         app:layout_constraintStart_toEndOf="@id/STRENGTH_ICON"
         app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_subrace" />
@@ -245,8 +259,10 @@
         android:id="@+id/DEXTERITY_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:text="Dexterity"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/EDIT_DEXTERITY"
         app:layout_constraintEnd_toEndOf="@id/DEXTERITY_ICON"
         app:layout_constraintStart_toStartOf="@id/DEXTERITY_ICON"
         app:layout_constraintTop_toBottomOf="@+id/DEXTERITY_ICON" />
@@ -255,8 +271,12 @@
         android:id="@+id/EDIT_DEXTERITY"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-2dp"
+        android:layout_marginBottom="61dp"
         android:ems="10"
         android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/WISDOM_ICON"
         app:layout_constraintEnd_toEndOf="@id/DEXTERITY_ICON"
         app:layout_constraintStart_toStartOf="@id/DEXTERITY_ICON"
         app:layout_constraintTop_toBottomOf="@id/DEXTERITY_TEXT" />
@@ -268,6 +288,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
         android:src="@drawable/constitution"
+        app:layout_constraintBottom_toTopOf="@+id/CONSTITUTION_TEXT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_subclass" />
 
@@ -277,16 +298,21 @@
         android:layout_height="wrap_content"
         android:text="Constitution"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@id/EDIT_CONSTITUTION"
         app:layout_constraintEnd_toEndOf="@id/CONSTITUTION_ICON"
         app:layout_constraintStart_toStartOf="@id/CONSTITUTION_ICON"
-        tools:layout_editor_absoluteY="270dp" />
+        app:layout_constraintTop_toBottomOf="@id/CONSTITUTION_ICON" />
 
     <EditText
         android:id="@+id/EDIT_CONSTITUTION"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-2dp"
+        android:layout_marginBottom="60dp"
         android:ems="10"
         android:inputType="text"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/CHARISMA_ICON"
         app:layout_constraintEnd_toEndOf="@id/CONSTITUTION_ICON"
         app:layout_constraintStart_toStartOf="@id/CONSTITUTION_ICON"
         app:layout_constraintTop_toBottomOf="@id/CONSTITUTION_TEXT" />
@@ -296,8 +322,8 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="60dp"
         android:src="@drawable/intelligence"
+        app:layout_constraintBottom_toTopOf="@+id/INTELLIGENCE_TEXT"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EDIT_STRENGTH" />
 
@@ -305,8 +331,10 @@
         android:id="@+id/INTELLIGENCE_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:text="Intelligence"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/EDIT_INTELLIGENCE"
         app:layout_constraintEnd_toEndOf="@id/INTELLIGENCE_ICON"
         app:layout_constraintStart_toStartOf="@id/INTELLIGENCE_ICON"
         app:layout_constraintTop_toBottomOf="@+id/INTELLIGENCE_ICON" />
@@ -316,8 +344,11 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="-1dp"
+        android:layout_marginBottom="66dp"
         android:ems="10"
         android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/character_creator_page_one_roll_stats"
         app:layout_constraintEnd_toEndOf="@id/INTELLIGENCE_ICON"
         app:layout_constraintStart_toStartOf="@id/INTELLIGENCE_ICON"
         app:layout_constraintTop_toBottomOf="@+id/INTELLIGENCE_TEXT" />
@@ -326,8 +357,8 @@
         android:id="@+id/WISDOM_ICON"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="60dp"
         android:src="@drawable/wisdom"
+        app:layout_constraintBottom_toTopOf="@+id/WISDOM_TEXT"
         app:layout_constraintEnd_toStartOf="@id/CHARISMA_ICON"
         app:layout_constraintStart_toEndOf="@+id/INTELLIGENCE_ICON"
         app:layout_constraintTop_toBottomOf="@id/EDIT_DEXTERITY" />
@@ -338,6 +369,7 @@
         android:layout_height="wrap_content"
         android:text="Wisdom"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/EDIT_WISDOM"
         app:layout_constraintEnd_toEndOf="@id/WISDOM_ICON"
         app:layout_constraintStart_toStartOf="@id/WISDOM_ICON"
         app:layout_constraintTop_toBottomOf="@id/WISDOM_ICON" />
@@ -347,8 +379,11 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="-1dp"
+        android:layout_marginBottom="123dp"
         android:ems="10"
         android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/character_creator_page_one_edit_health"
         app:layout_constraintEnd_toEndOf="@id/WISDOM_ICON"
         app:layout_constraintStart_toStartOf="@id/WISDOM_ICON"
         app:layout_constraintTop_toBottomOf="@+id/WISDOM_TEXT" />
@@ -357,9 +392,9 @@
         android:id="@+id/CHARISMA_ICON"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="60dp"
         android:layout_marginEnd="40dp"
         android:src="@drawable/charisma"
+        app:layout_constraintBottom_toTopOf="@+id/CHARISMA_TEXT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/EDIT_CONSTITUTION" />
 
@@ -369,8 +404,9 @@
         android:layout_height="wrap_content"
         android:text="Charisma"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/EDIT_CHARISMA"
         app:layout_constraintEnd_toEndOf="@id/CHARISMA_ICON"
-        app:layout_constraintHorizontal_bias="0.547"
+        app:layout_constraintHorizontal_bias=".5"
         app:layout_constraintStart_toStartOf="@id/CHARISMA_ICON"
         app:layout_constraintTop_toBottomOf="@id/CHARISMA_ICON" />
 
@@ -379,8 +415,11 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="-1dp"
+        android:layout_marginBottom="65dp"
         android:ems="10"
         android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/character_creator_page_one_next_page"
         app:layout_constraintEnd_toEndOf="@id/CHARISMA_ICON"
         app:layout_constraintStart_toStartOf="@id/CHARISMA_ICON"
         app:layout_constraintTop_toBottomOf="@id/CHARISMA_TEXT" />
